@@ -28,26 +28,26 @@ list($hash, $uname, $save, $new_password1, $new_password2) =
 list($fullname, $email, $defaultLanguage) =
 	getRequestVar(array('fullname', 'email', 'defaultLanguage'));
 
-$errorCount = 0;
 
 printPopupStart(gTranslate('core', "Make New Password"));
-
 if (empty($hash) || empty($uname)) {
 	showInvalidReqMesg();
 	exit;
 }
 
-if (!empty($uname) ) {
-	$tmpUser = $gallery->userDB->getUserByUsername($uname);
-	if (! empty($tmpUser) && !$tmpUser->checkRecoverPasswordHash($hash)) {
-		if($tmpUser->lastAction ==  "new_password_request") {
-			showInvalidReqMesg(gTranslate('core', "The recovery password is not the expected value, please try again."));
-			exit;
-		}
-		else {
-			showInvalidReqMesg();
-			exit;
-		}
+$tmpUser = $gallery->userDB->getUserByUsername($uname);
+
+// Invalid username given
+if (empty($tmpUser)) {
+	showInvalidReqMesg();
+	exit;
+}
+
+// Given Hash is wrong
+if(!$tmpUser->checkRecoverPasswordHash($hash)) {
+	if($tmpUser->lastAction ==  "new_password_request") {
+		showInvalidReqMesg(gTranslate('core', "The recovery password is not the expected value, please try again."));
+		exit;
 	}
 	else {
 		showInvalidReqMesg();
@@ -56,20 +56,16 @@ if (!empty($uname) ) {
 }
 
 if (!empty($save)) {
-	$saveOk = true;
-
 	if (empty($new_password1) ) {
 		$gErrors['new_password1'] = gTranslate('core', "You must provide your new password.");
-		$saveOk = false;
 	}
 	else if (strcmp($new_password1, $new_password2)) {
 		$gErrors['new_password2'] = gTranslate('core', "Passwords did not match!");
-		$errorCount++;
 	}
 	else {
-		$gErrors['new_password1'] = $gallery->userDB->validPassword($new_password1);
-		if ($gErrors['new_password1']) {
-			$saveOk = false;
+		$pwStatus = $gallery->userDB->validPassword($new_password1);
+		if($pwStatus != null) {
+			$gErrors['new_password1'] = $pwStatus;
 		}
 	}
 
@@ -78,15 +74,13 @@ if (!empty($save)) {
 		$gErrors['fullname'] =
 			sprintf(gTranslate('core', "%s contained invalid data, sanitizing input."),
 					sanitizeInput($fullname));
-		$saveOk = false;
 	}
 
 	if (!empty($email) && !check_email($email)) {
 		$gErrors['email'] = gTranslate('core', "You must specify a valid email address.");
-		$saveOk = false;
 	}
 
-	if ($saveOk) {
+	if (empty($gErrors)) {
 		$tmpUser->setFullname($fullname);
 		$tmpUser->setEmail($email);
 
@@ -105,7 +99,16 @@ if (!empty($save)) {
 
 		// Switch over to the new username in the session
 		$gallery->session->username = $uname;
-		header("Location: " . makeAlbumHeaderUrl());
+
+		if(!empty($notice_messages)) {
+			printInfoBox($notice_messages);
+		}
+
+		echo gallery_success(gTranslate('core', "The password was successfully saved."));
+		echo "\n<br>";
+		echo gButton('main', gTranslate('core', "Go to Gallery"), "location.href='". makeGalleryUrl() ."'");
+		includeHtmlWrap("popup.footer");
+		exit;
 	}
 }
 
@@ -121,29 +124,24 @@ $fullname	 = $tmpUser->getFullname();
 $email		 = $tmpUser->getEmail();
 $defaultLanguage = $tmpUser->getDefaultLanguage();
 
+
 echo '<div class="g-sitedesc">';
 echo gTranslate('core', "You can change your user information here.");
 echo gTranslate('core', "You must enter the new password twice.");
 
 echo "\n</div>";
 
-echo makeFormIntro('new_password.php', array('action' => '#','name' => 'usermodify_form', 'style' => 'padding: 15px 50px 0 50px '));
+echo makeFormIntro('new_password.php', array('name' => 'usermodify_form', 'style' => 'padding: 15px 50px 0 50px '));
 
 include(dirname(__FILE__) . '/html/userData.inc');
 
 ?>
 <p>
-<input type="hidden" name="hash" value="<?php echo $hash ?>">
+<?php echo gInput('hidden', 'hash', null, false, $hash); ?>
 <?php echo gSubmit('save', gTranslate('core', "Save")); ?>
 <?php echo gButton('cancel', gTranslate('core', "Cancel"), "location.href='". $gallery->app->photoAlbumURL ."'"); ?>
 </form>
 
-<script language="javascript1.2" type="text/JavaScript">
-<!--
-// position cursor in top form field
-document.usermodify_form.new_password1.focus();
-//-->
-</script>
 </div>
 
 </body>
