@@ -1,3 +1,7 @@
+2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b4
+
+ * Fix: Creating new passwords for "lost password" and "selfregister" failed.
+
 2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b3
 
  * Change: Little code nicify. CSS fixes etc.
